welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
return;
^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
if(estFaceMur){
^